# landscape-sim

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  WorldToGPU.sln  WorldToGPU.vcxproj  WorldToGPU.vcxproj.filters
.clangd/index/: main.cc.83F297CF39D06F02.idx
apps/: CMakeLists.txt  alpha.cc  alpha.h  main.cc
apps/test/: CMakeLists.txt  main.cc  test.cc  test.h
apps/test/shaders/: CMakeLists.txt
include/lsim/: types.h
include/lsim/base/: log.h  types.h
include/lsim/platform/: i_application.h  types.h  window.h
include/lsim/renderer/: renderer.h
include/lsim/renderer/vlk/: command_buffer.h  command_pool.h  debug_messenger.h  device.h  device_queue.h  fence.h  framebuffer.h  image_view.h  instance.h  physical_device.h  pipeline_graphics.h  pipeline_layout.h  queue.h  queue_families.h  render_pass.h  semaphore.h  shader_module.h  surface.h  swapchain.h  validation.h
product/: .gitignore  imgui.ini
product/ini/: imgui.ini  settings.json
product/scenes/: scene_alpha.json
product/shaders/: frag_vb.spv  terrain_frag.spv  terrain_vert.spv  vert_vb.spv
shaders/: compile.bat  shader_vb.vert  terrain.frag  terrain.vert
src/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/application/: alpha_app.cpp  alpha_app.h  app.cpp  app.h  world_to_gpu.cpp  world_to_gpu.h
src/apps/: main.cc
src/base/: cmd_line_parser.cpp  cmd_line_parser.h  image.cpp  image.h  image_file.cpp  image_file.h  json_loader.cpp  json_loader.h  log.h  matrix.h  types.h  util.cpp  util.h
src/graphics/: graphics_system.cpp  graphics_system.h  types.h
src/graphics/objects/: triangle.cpp  triangle.h
src/gui/: gui.cpp  gui.h  imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp
src/objects/: i_object.cpp  i_object.h  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h  triangle_vb.cpp  triangle_vb.h  types.h
src/platform/: CMakeLists.txt  i_application.cc  i_application.cpp  i_application.h  input.cpp  input.h  platform.cpp  platform.h  window.cc
src/renderable/: i_renderable.cpp  i_renderable.h  rectangle.cpp  rectangle.h  terrain.cpp  terrain.h  triangle.cpp  triangle.h  triangle_vb.cpp  triangle_vb.h  types.h
src/renderer/: CMakeLists.txt  context.cpp  context.h  depth_image.cpp  depth_image.h  descriptor_set_layout_cache.cpp  descriptor_set_layout_cache.h  frame_manager.cpp  frame_manager.h  frame_resource.cpp  frame_resource.h  index_buffer.cpp  index_buffer.h  one_time_commands.cpp  one_time_commands.h  pipeline_manager.cpp  pipeline_manager.h  renderer.cc  renderer.cpp  renderer.h  shader_resources.cpp  shader_resources.h  sync_manager.cpp  sync_manager.h  texture2d.cpp  texture2d.h  types.h  vertex_buffer.cpp  vertex_buffer.h  window.cpp  window.h
src/renderer/vlk/: buffer.cpp  buffer.h  command_buffer.cc  command_buffer.cpp  command_buffer.h  command_buffers.cpp  command_buffers.h  command_pool.cc  command_pool.cpp  command_pool.h  debug_messenger.cc  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  descriptor_sets.cpp  descriptor_sets.h  device.cc  device.cpp  device.h  device_queue.cc  device_queue.cpp  device_queue.h  fence.cc  fence.cpp  fence.h  frame_buffer.cpp  frame_buffer.h  framebuffer.cc  framebuffers.cpp  framebuffers.h  graphics_pipeline.cpp  graphics_pipeline.h  image.cpp  image.h  image_view.cc  image_view.cpp  image_view.h  (+42 more)
src/scene/: environment.cpp  environment.h  i_camera.cpp  i_camera.h  orthographic_camera.cpp  orthographic_camera.h  perspective_camera.cpp  perspective_camera.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  scene_parser.cpp  scene_parser.h  types.h  view.cpp  view.h
src/util/: log.h  types.h  util.h
